--- a/css/style.css
+++ b/css/style.css
@@ -329,12 +329,12 @@ p.cards-text {
     margin-top: 24px;
 }
 button.btn-custom.nav-link.header-button:focus{
-	outline:0;
+  outline:0;
 }
 .tablet {
-		display: none;
-	}
-	 #footer {
+    display: none;
+  }
+   #footer {
     padding-bottom: 20px;
 }
 .textleft {
@@ -411,14 +411,15 @@ ul#pills-tab {
   outline: 0;
 }
 #contact #header-main {
-  background: url(../img/headerbg.png);
+  background-image: url(../img/headerbg.png);
   padding: 167px 0px;
-
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 #contact #header {
   padding: unset !important;
-  padding-top: 20px; 
-
+  padding-top: 20px;
+  background-image: unset;
 }
  
 #body-6 .border-center:after {
@@ -450,7 +451,7 @@ ul#pills-tab {
  
  }
  @media (max-width: 992px) {
-	.tablet {
-		display: block;
-	}
+  .tablet {
+    display: block;
+  }
  }
